<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etape_1_respiration"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:gravity="center"
            tools:ignore="NestedWeights"
            android:background="@color/colorBeige"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/colorBlack"
            android:text="@string/description_breath"
            android:textSize="17sp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights"
            android:padding="10dp"/>

        <Button
            android:id="@+id/countdown_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_breath_button"
            android:background="@color/colorBrown"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="15sp"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/inspire_expire"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/inspirer"
                android:gravity="center"
                android:textSize="30sp"
                tools:ignore="NestedWeights"
                android:background="@color/colorBlueCanard"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/countdown_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/breath_time"
                android:gravity="center"
                android:textSize="30sp"
                tools:ignore="NestedWeights"
                android:background="@color/colorBeige"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/image_lungs"
            android:src="@drawable/lungs_0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:contentDescription="@string/animations_de_poumons"
            />

    </LinearLayout>


</LinearLayout>